# Learn_reg

./: Makefile.am  ReadMe.txt
2D-codes/: learn_reg2_noise.cc  learn_reg2_noise.param
2D-codes/MATLAB/: Coeff.txt  Coeff_truth.txt  Coeffdata.txt  Coeffdata1.txt  Coeffdata2.txt  Coeffdata_validation.txt  Coeffdatabis2.txt  CoefflearnedNN.txt  CoefflearnedNN1.txt  CoefflearnedNN2.txt  CoefflearnedNN_validation.txt  CoefflearnedNN_validation1.txt  CoefflearnedNoise_validation.txt  CoefflearnedNoise_validation2.txt  Jeval.txt  Misfit.txt  Norm_grad.txt  Subtol.txt  Supertol.txt  Weights.txt  Weights1.txt  Weights2.txt  Weights_trans2.txt  neuralnetwork.m  plotneuralnetwork.m
2D-codes/MATLAB/validation_L2/interpolated/: Coeffdata_validation.txt  CoefflearnedL2_validation.txt  CoefflearnedNN_validation.txt
2D-codes/MATLAB/validation_L2/non-interpolated/: Coeffdata_validation.txt  CoefflearnedL2_validation.txt  CoefflearnedNN_validation.txt
L2/: learn_reg.cc  learn_reg.param
noise3/: ReadMe.txt  learn_reg.cc
